# codable-rs

crates/codable/: Cargo.toml
crates/codable-derive/: Cargo.toml
crates/codable-derive/src/: lib.rs
crates/codable-json/: Cargo.toml
crates/codable-json/src/: dec.rs  enc.rs  lib.rs  value.rs
crates/codable-macro/: Cargo.toml
crates/codable-macro-impl/: Cargo.toml
crates/codable-macro-impl/src/: lib.rs
crates/codable-macro/src/: lib.rs
crates/codable/src/: coding_path.rs  lib.rs
crates/codable/src/dec/: mod.rs
crates/codable/src/enc/: mod.rs
