[package]
name = "codable-json"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
codable = { path = "../codable" }
indexmap = "1.9.1"
serde_json = { optional = true, version = "1.0.91", features = ["indexmap", "preserve_order"] }
slotmap = "1.0.6"
thiserror = "1.0.34"

[features]
default = ["serde-compat"]
serde-compat = ["serde_json"]