[package]
name = "codable"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
indexmap = { version = "2", optional = true, default-features = false  }
smallvec = { version = "1.11.0", optional = true, default-features = false  }
thiserror = "1.0.34"
tracing = { version = "0.1.37", optional = true }
codable-derive = { version = "0.1.0", optional = true, path = "../codable-derive" }
uuid = { version = "1.4.1", optional = true, default-features = false }
chrono = { version = "0.4.26", default-features = false, optional = true, features = ["alloc"] }

[dev-dependencies]
codable-json = { path = "../codable-json" }
codable = { path = "." }
chrono = { version = "0.4.26", features = ["std"] }

[features]
derive = ["codable-derive"]
